--- a/app/src/main/res/layout/fragment_data_diri.xml
+++ b/app/src/main/res/layout/fragment_data_diri.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DataDiriFragment"
@@ -8,8 +9,34 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/judul"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Fragment Data Diri" />
+        android:layout_height="wrap_content"
+        android:text="Fragment Data Diri"
+        android:paddingLeft="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-</FrameLayout>
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Waktu Mulai"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/judul"/>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText1"
+        android:text="Get Date"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="24dp"
+        app:layout_constraintLeft_toRightOf="@+id/editText1"
+        app:layout_constraintTop_toBottomOf="@+id/judul" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
