--- a/app/src/main/res/layout/fragment_pendidikan.xml
+++ b/app/src/main/res/layout/fragment_pendidikan.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PendidikanFragment"
@@ -8,8 +9,33 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/judul"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Fragment Pendidikan" />
+        android:layout_height="wrap_content"
+        android:text="Fragment Pendidikan"
+        android:paddingLeft="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/selected_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pilih Pendidikan:"
+        android:textSize = "20dp"
+        android:layout_marginTop="24dp"
+        android:paddingLeft="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/judul"/>
+
+    <Spinner
+        android:id="@+id/spinner_pendidikan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:layout_marginLeft="24dp"
+        android:paddingLeft="24dp"
+        app:layout_constraintStart_toEndOf="@+id/selected_item"
+        app:layout_constraintTop_toBottomOf="@id/judul" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
