--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,7 +88,8 @@
         android:layout_height="wrap_content"
         android:text="Test Notif"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_sysdate"
+        android:onClick="sendNotification"
+        app:layout_constraintTop_toBottomOf="@+id/btn_bg_task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
